fix: about text overlapping profile image

--- a/src/sections/about/about.module.scss
+++ b/src/sections/about/about.module.scss
@@ -26,10 +26,6 @@
             width: 100%;
             height: 100%;
             text-align: center;
-
-            @include mixins.respond(phone) {
-                max-height: 30rem;
-            }
         }
     }
 
